# learn

./: .gitignore  README.md
android/Dice/app/: build.gradle
android/Dice/gradle/wrapper/: gradle-wrapper.properties
android/ImRich/: settings.gradle
android/ImRich/app/: build.gradle
android/ImRich/gradle/wrapper/: gradle-wrapper.properties
asm/: hello  hello.asm  hello.s
asm/mixing/: a.out  callmaxoftree.c  maxoftree.asm
c/: learn  main.c
elixir/cards/lib/: cards.ex
elixir/hello/: mix.exs
elixir/hello/assets/: package-lock.json
elixir/hello/config/: config.exs  dev.exs
elixir/hello/lib/hello_web/: endpoint.ex
flutter/matkul1/: README.md  pubspec.yaml
flutter/matkul1/android/app/: build.gradle
flutter/matkul1/ios/Runner/: Info.plist
flutter/matkul1/ios/Runner.xcodeproj/: project.pbxproj
flutter/matkul1/test/: widget_test.dart
flutter_web/lib/: main.dart
kotlin/src/: Person.kt  main.kt
lists/: Cargo.toml
lists/src/: first.rs  second.rs  third.rs
node/: index.js  main.js
python/: countasync.py  rand.py
rust-mobile/android/: build.gradle  settings.gradle
rust-mobile/android/app/: build.gradle
rust-mobile/android/gradle/wrapper/: gradle-wrapper.properties
rust-mobile/ios/rusty-ios/rusty-ios/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
rust-mobile/ios/rusty-ios/rusty-ios.xcodeproj/: project.pbxproj
rust-mobile/rust/: Cargo.toml  android.sh
rust-mobile/rust/src/: android.rs  lib.rs
swift/MyPlayground.playground/: Contents.swift
tokio/: Cargo.toml
tokio/src/: main.rs
(+26 files in other folders)
